--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DB=mongodb+srv://infobase:infobase@cluster0.8lemx.mongodb.net/infobase?retryWrites=true&w=majority
+mongodb+srv://chat-aidimin:Gattes2013@evilchatdb.xabw8.mongodb.net/evilchatdb?retryWrites=true&w=majority
