fixing config db connect

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-mongodb+srv://chat-aidimin:Gattes2013@evilchatdb.xabw8.mongodb.net/evilchatdb?retryWrites=true&w=majority
+MONGO_DB= mongodb+srv://admin:Gattes2013@evilchatdb.xabw8.mongodb.net/evilcodedb?retryWrites=true&w=majority
