fixing db connect

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_DB= mongodb+srv://admin:Gattes2013@evilchatdb.xabw8.mongodb.net/evilcodedb?retryWrites=true&w=majority
+MONGO_DB= mongodb+srv://admin:R4q2G0Z7hlSbyeKG@cluster0.jmkcc.mongodb.net/Cluster0?retryWrites=true&w=majority
